--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             </a>
 
             <a href="https://saroakh-moaz.vercel.app/" target="_blank" class="portfolio-item">
-                <span style="font-weight:bold;">🔗 مشروع "صاروخ معاذ"</span>
+                <span style="font-weight:bold;">🔗 مشروع "صواريخ الزوز"</span>
                 <span class="tag">Web App</span>
             </a>
 
